<resources>
    <string name="app_name">Whatsfordinner</string>
    <string name="action_settings">Settings</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="groceries">Groceries</string>
    <string name="newdish">New Dish</string>
    <string name="title_activity_meals">MealsActivity</string>
    <string name="title_activity_new_recipes">NewRecipesActivity</string>
    <string name="title_activity_grocery">GroceryActivity</string>
    <string name="title_activity_new_dish">NewDishActivity</string>
    <string name="gomeals">gotomeals</string>
    <string name="gorecipes">gotorecipe</string>
    <string name="gogroceries">gotogroceries</string>
    <string name="gonewdish">gotonewdish</string>
    <string name="zero">0</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit">Edit</string>
    <string name="title_activity_enter_directions">EnterDirectionsActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="info"> App by Yimin Mei  ( 010882560)
       WhatsForDinner version 1.01
       Contact information : yimin.mei@sjsu.edu Or visit Website: yimin.wearables.com</string>
    <string name="title_activity_edit_grocery">EditGroceryActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="title_activity_week_summary">WeekSummaryActivity</string>


</resources>
