<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wearable.whatsfordinner.MenuActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView1"
        android:src="@drawable/whatsfordinner"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/bookicon"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignEnd="@+id/imageView1"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:layout_centerVertical="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/bindericon"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/carticon"
        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/plusicon"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meals"
        android:id="@+id/button1"
        android:layout_below="@+id/imageView2"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3"
        android:onClick="goTo"
        android:contentDescription="@string/meals"
        android:background="@color/white"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipes"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button1"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:onClick="goTo"
        android:contentDescription="@string/gorecipes"
        android:background="@color/white"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groceries"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:onClick="goTo"
        android:contentDescription="@string/gorecipes"
        android:background="@color/white"/>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:text="@string/newdish"
        android:onClick="goTo"
        android:contentDescription="@string/gonewdish"
        android:background="@color/white"
        android:layout_below="@+id/imageView4"
        android:layout_alignRight="@+id/imageView5"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5" />

</RelativeLayout>
